@@ -1,3 +1,13 @@
+2001-03-29  Jeff Hobbs  <jeffh@gimlet.activestate.com>
+
+	* unix/configure:
+	* unix/tcl.m4: corrected IRIX-5.x config to not use -n32.
+ 	(english) [Patch 403626]
+
+	* unix/tclUnixThrd.c (Tcl_ConditionWait): fixed handling of
+	timeout for threads (corrects excessive CPU usage issue for Tk on
+	Unix in threaded Tcl environment). (ruppert) [Bug #411603]
+
 2001-03-29  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* doc/lsort.n: Added some notes that clarify the behaviour of
